<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/bg1">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=""
    android:layout_gravity="center"
    android:textSize="30sp"
    android:layout_marginTop="20sp"
    android:layout_marginBottom="20sp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:background="@color/white"
        android:textSize="30sp"
        android:text="@string/continues"
        android:textColor="@color/ygcolor" />

    <Button
        android:id="@+id/btnStart"
        android:layout_marginRight="30sp"
        android:layout_marginLeft="30sp"
        android:layout_marginBottom="5sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/start"
        android:background="@color/white"
        android:textColor="@color/ygcolor" />

    <Button
        android:id="@+id/btnTopten"
        android:layout_marginRight="30sp"
        android:layout_marginLeft="30sp"
        android:layout_marginBottom="5sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/topten"
        android:background="@color/white"
        android:textColor="@color/ygcolor" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:background="@color/white"
        android:textSize="30sp"
        android:text="@string/about"
        android:textColor="@color/ygcolor" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:background="@color/white"
        android:textSize="30sp"
        android:text="@string/exit"
        android:textColor="@color/ygcolor" />

</LinearLayout>