<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
   	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:background="@drawable/bg2"
    android:padding="50dip"
    android:orientation="horizontal" >

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginBottom="25dip"
			android:text="@string/login"
			android:textColor="@color/yellow"
			android:textSize="30sp"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/textView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/name"
			android:textColor="@color/yellow"
			android:textSize="20sp" />

		<EditText
			android:id="@+id/name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="输入用户名">

		</EditText>

		<TextView
			android:id="@+id/textView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/password"
                android:textColor="@color/yellow"
			android:textSize="20sp" />

		<EditText
			android:id="@+id/password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="输入密码"
			android:inputType="textPassword" />

		<TableRow
			android:id="@+id/tableRow1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<Button
				android:id="@+id/login"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:layout_gravity="left"
                    android:background="@color/yellow"
                    android:text="@string/for_login"
				android:textColor="@color/brown" />

			<TextView
				android:id="@+id/textView3"
				android:layout_width="90dp"
				android:layout_height="wrap_content"
				android:text="" />

			<Button
				android:id="@+id/regest"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
                    android:background="@color/yellow"
				android:text="@string/regest"
                    android:textColor="@color/brown"
				android:layout_gravity="right" />

		</TableRow>

	</LinearLayout>

</LinearLayout>